# audit-userspace

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  ChangeLog  INSTALL  INSTALL.tmp  Makefile.am  README  README-install  README-very-old  README.md  SECURITY.md  THANKS  TODO  audit.spec  autogen.sh  config.guess  config.sub  configure.ac  gcc-attributes.h
audisp/: Makefile.am  audispd-builtins.c  audispd-builtins.h  audispd-config.c  audispd-config.h  audispd-llist.c  audispd-llist.h  audispd-pconfig.c  audispd-pconfig.h  audispd.c  libdisp.h  queue.c  queue.h
audisp/plugins/: Makefile.am
audisp/plugins/af_unix/: Makefile.am  af_unix.conf  audisp-af_unix.8  audisp-af_unix.c  queue.c  queue.h
audisp/plugins/builtins/: Makefile.am  af_unix.conf  syslog.conf
audisp/plugins/filter/: Makefile.am  audisp-filter.8  audisp-filter.c  audisp-filter.conf  filter.conf  (+1 more)
audisp/test/: Makefile.am  pconfig_alloc_test.c  test-audispd-io.c  test-audispd-llist.c  test-queue.c
auparse/: Makefile.am  access-flagtab.h  accesstab.h  arphooktab.h  auditd-config.c  auparse-defs.h  auparse-idata.h  auparse.c  auparse.h  auparse.pc.in  bpftab.h  captab.h  classify-internal.h  classify-llist.c  classify-llist.h  classify.c  classify_obj_type_map.h  classify_record_map.h  classify_syscall_map.h  clocktab.h  clone-flagtab.h  data_buf.c  data_buf.h  ellist.c  ellist.h  epoll_ctl.h  expression.c  expression.h  famtab.h  fcntl-cmdtab.h  flagtab.h  fsconfig.h  icmptypetab.h  inethooktab.h  internal.h  interpret.c  interpret.h  ioctlreqtab.h  ip6optnametab.h  ipccmdtab.h  (+49 more)
auparse/test/: Makefile.am  README  append_oom_test.c  auparse_extra_test.c  auparse_test.c  auparse_test.enriched  auparse_test.py  auparse_test.ref  auparse_test.ref.py  auparselol_test.c  databuf_test.c  lookup_test.c  lru_cache_test.c  run_auparse_tests.sh.in  run_auparselol_test.sh.in  uid_name_wrap_test.c
auplugin/: Makefile.am  auplugin-fgets.c  auplugin.c  auplugin.h  libauplugin.map
auplugin/test/: Makefile.am  fgets_r_test.c  fgets_test.c  metrics_test.c
bindings/python/: Makefile.am  auparse_python.c  setup.py
common/: Makefile.am  audit-fgets.c  common.c  common.h  message.c  strsplit.c
common/test/: Makefile.am  fgets_test.c
init.d/: Makefile.am  audispd.conf  audit-functions  audit-rules.service  audit-rules.service.in  audit-tmpfiles.conf  audit.bash_completion  audit.rules  auditd.condrestart  auditd.conf  auditd.cron  auditd.init  auditd.reload  auditd.restart  auditd.resume  auditd.rotate  auditd.service  auditd.service.in  auditd.state  auditd.stop  auditd.sysconfig  augenrules  augenrules.in  augenrules.service
lib/: Makefile.am  aarch64_table.h  alpha_table.h  arm_table.h  armeb_table.h  audit-fgets.c  audit-logging.h  audit-records.h  audit.pc.in  audit_logging.c  audit_logging.h  deprecated.c  dso.h  errormsg.h  errtab.h  fieldtab.h  flagtab.h  fstypetab.h  gen_tables.c  gen_tables.h  gen_tables64.c  gen_tables64.h  i386_table.h  ia64_table.h  libaudit.c  libaudit.h  libaudit.map  lookup_table.c  loongarch64_table.h  machinetab.h  message.c  mips_n32_table.h  mips_n64_table.h  mips_o32_table.h  msg_typetab.h  netlink.c  permtab.h  ppc_table.h  private.h  riscv32_table.h  (+7 more)
lib/test/: Makefile.am  lookup_test.c
rules/: 10-base-config.rules  10-no-audit.rules  20-dont-audit.rules  21-no32bit.rules  30-nispom.rules  30-ospp-v42-5-perm-change-failed.rules  30-ospp-v42-5-perm-change-success.rules  30-ospp-v42-6-owner-change-failed.rules  30-ospp-v42-6-owner-change-success.rules  30-ospp-v42.rules  30-pci-dss-v31.rules  30-stig.rules  31-privileged.rules  40-local.rules  43-module-load.rules  44-installers.rules  Makefile.am  README  README-rules
src/: Makefile.am  auditctl-listing.c  auditctl-listing.h  auditctl-llist.c  auditctl-llist.h  auditctl.c  auditd-children.c  auditd-children.h  auditd-config.c  auditd-config.h  auditd-dispatch.c  auditd-dispatch.h  auditd-event.c  auditd-event.h  auditd-listen.c  auditd-listen.h  auditd-reconfig.c  auditd-reconfigure.c  auditd-sendmail.c  auditd.c  auparse-stub.h  aureport-options.c  aureport-options.h  aureport-output.c  aureport-scan.c  aureport-scan.h  aureport.c  ausearch-avc.c  ausearch-avc.h  ausearch-checkpt.c  ausearch-checkpt.h  ausearch-common.h  ausearch-int.c  ausearch-int.h  ausearch-llist.c  ausearch-llist.h  ausearch-lol.c  ausearch-lol.h  ausearch-lookup.c  ausearch-lookup.h  (+19 more)
src/libev/: AUDIT-NOTES.md  Makefile.am  config.h  ev.c  ev.h  ev_epoll.c  ev_iouring.c  libev-select-notes.md
src/mt/: Makefile.am
src/test/: Makefile.am  auditctl_key_test.c  auditctl_list_alloc_test.c  auditctl_rule_file_test.c  auditd_config_alloc_test.c  auditd_config_manager_test.c  auditd_dispatch_test.c  auditd_reconfigure_test.c  ausearch_checkpt_test.c  ausearch_time_test.c  delete_all_alloc_test.c  format_event_test.c  generic_llist_test.c  ilist_alloc_test.c  ilist_test.c  lol_alloc_test.c  slist_test.c
system-config-audit/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  aclocal.m4  autogen.sh  configure  configure.ac  system-config-audit.desktop.in
system-config-audit/admin/: intltool-extract.in  intltool-merge.in  intltool-update.in  system-config-audit-server.console  system-config-audit-server.console.in  system-config-audit-server.pam
system-config-audit/po/: LINGUAS  Makevars  POTFILES.in  as.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fr.po  gu.po  hi.po  hu.po  it.po  ja.po  kn.po  ko.po  mai.po  ml.po  mr.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sr@latin.po  sv.po  ta.po  te.po  zh_CN.po  zh_TW.po
system-config-audit/src/: audit_rules.py  auditd_config.py  client.py  config.h.in  config.py  dialog_base.py  event_type_dialog.py  field_help.py  global_dialog.py  key_dialog.py  key_list_dialog.py  lists.py  main.py  main_window.py  rule_dialog.py  rule_list_dialog.py  rule_table.py  save_dialog.py  server.c  server.h  server.py  settings.py  settings.py.in  system-config-audit  system-config-audit.glade  system-config-audit.in  type_list_dialog.py  util.py  watch_dialog.py  watch_list_dialog.py
(+275 files in other folders)
